Split worker transports from network clients
Extract polling, WebSocket, and socket client interfaces with default OkHttp/JDK implementations so transports only handle Worker Delivery protocol state and command execution. Update the worker README and tests to cover the new boundaries, client-owned reconnect/resource handling, and pending-result behavior across reconnects.